[gd_scene load_steps=2 format=2]

[ext_resource path="res://Register.gd" type="Script" id=1]

[node name="RegisterScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 250.0
margin_top = 100.0
margin_right = 775.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 525.0
margin_bottom = 400.0

[node name="UsernameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 525.0
margin_bottom = 73.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UsernameContainer"]
margin_top = 29.0
margin_right = 260.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Username:"
align = 1
valign = 1

[node name="UsernameText" type="LineEdit" parent="MarginContainer/VBoxContainer/UsernameContainer"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmailContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 525.0
margin_bottom = 150.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EmailContainer"]
margin_top = 21.0
margin_right = 260.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Email:
"
align = 1
valign = 1

[node name="EmailText" type="LineEdit" parent="MarginContainer/VBoxContainer/EmailContainer"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 73.0
size_flags_horizontal = 3

[node name="PasswordContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 525.0
margin_bottom = 227.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PasswordContainer"]
margin_top = 29.0
margin_right = 260.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Password:"
align = 1

[node name="PasswordText" type="LineEdit" parent="MarginContainer/VBoxContainer/PasswordContainer"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 73.0
size_flags_horizontal = 3

[node name="ConfirmPasswordContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 525.0
margin_bottom = 304.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ConfirmPasswordContainer"]
margin_top = 29.0
margin_right = 260.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Comfirm password:"
align = 1

[node name="ConfirmPasswordText" type="LineEdit" parent="MarginContainer/VBoxContainer/ConfirmPasswordContainer"]
margin_left = 264.0
margin_right = 525.0
margin_bottom = 73.0
size_flags_horizontal = 3

[node name="Register" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 230.0
margin_top = 308.0
margin_right = 294.0
margin_bottom = 381.0
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Register"
script = ExtResource( 1 )

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 385.0
margin_right = 525.0
margin_bottom = 399.0
align = 1
valign = 1
[connection signal="text_changed" from="MarginContainer/VBoxContainer/UsernameContainer/UsernameText" to="MarginContainer/VBoxContainer/Register" method="_on_UsernameText_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/EmailContainer/EmailText" to="MarginContainer/VBoxContainer/Register" method="_on_EmailText_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PasswordContainer/PasswordText" to="MarginContainer/VBoxContainer/Register" method="_on_PasswordText_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/ConfirmPasswordContainer/ConfirmPasswordText" to="MarginContainer/VBoxContainer/Register" method="_on_ConfirmPasswordText_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/ConfirmPasswordContainer/ConfirmPasswordText" to="MarginContainer/VBoxContainer/Register" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Register" to="MarginContainer/VBoxContainer/Register" method="_on_Register_pressed"]
